--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,11 @@
 }
 
 
-.box {
-  width: 300px;
-  height: 300px;
-  padding: 50px;
-  margin: 20px;
-
-  background-color: black;
-
+.container {
+  display: flex; /* Use flex layout */
+  flex-direction: row; /* Lay out items horizontally (left to right) */
+  flex-wrap: wrap; /* Allow items to wrap to the next row if necessary */
 }
+
+
 
